<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ssvtech.jalforce1.fragment.DailyDeliveryRouteReportDetailsFragment">



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:text="@string/route"
                    android:textColor="#000"
                    android:layout_marginLeft="5dp"/>
                <TextView
                    android:id="@+id/routeView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="18dp"
                    android:textColor="#006400"

                    />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="#000"
                    android:layout_marginLeft="5dp"
                    />
                <TextView
                    android:id="@+id/dateView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="18dp"
                    android:textColor="#006400"
                    />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NoOfCustomers"
                    android:textColor="#000"
                    android:layout_marginLeft="5dp"/>
                <TextView
                    android:id="@+id/numberOfCustomers"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#006400"
                    android:textSize="18dp"
                    android:layout_weight="1"/>

            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/StockCansonthisroute"
                    android:textColor="#000"
                    android:layout_marginLeft="5dp"/>
                <TextView
                    android:id="@+id/pendingCans"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="18dp"
                    android:textColor="#006400"

                    android:layout_weight="1"/>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/LoadCansonthisroute"
                    android:textColor="#000"
                    android:layout_marginLeft="5dp"/>
                <TextView
                    android:id="@+id/loadCan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#006400"
                    android:textSize="18dp"
                    android:layout_weight="1"/>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FinalPendingCansonthisroute"
                    android:textColor="#000"
                    android:layout_marginLeft="5dp"/>
                <TextView
                    android:id="@+id/finalPendingCansonthisroute"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#006400"
                    android:textSize="18dp"
                    android:layout_weight="1"/>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/EmptyCansReturn"
                    android:textColor="#000"
                    android:layout_marginLeft="5dp"/>
                <TextView
                    android:id="@+id/emptyCansReturn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#006400"
                    android:textSize="18dp"
                    android:layout_weight="1"/>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FilledCansReturn"
                    android:textColor="#000"
                    android:layout_marginLeft="5dp"/>
                <TextView
                    android:id="@+id/filledCansReturn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#006400"
                    android:textSize="18dp"
                    android:layout_weight="1"/>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/totaldeliveredcans"
                    android:textColor="#000"
                    android:layout_marginLeft="5dp"/>
                <TextView
                    android:id="@+id/totaldeliveredcans"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#006400"
                    android:textSize="18dp"
                    android:layout_weight="1"/>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DriverName"
                    android:textColor="#000"
                    android:layout_marginLeft="5dp"/>
                <TextView
                    android:id="@+id/drivername"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#006400"
                    android:textSize="18dp"
                    android:layout_weight="1"/>

            </TableRow>
        </TableLayout>
    </LinearLayout>




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resultView"
        android:layout_marginTop="25dp"
        android:textSize="15dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="bottom|center_horizontal">

        <Button
            android:id="@+id/backToListButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:gravity="left"
            android:text="@string/BacktoList"
            android:textSize="16sp"
            android:textStyle="normal|bold" />

        <Button
            android:id="@+id/btnHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="20dp"
            android:text="@string/Home"
            android:textSize="16sp"
            android:textStyle="normal|bold" />
    </LinearLayout>


</FrameLayout>
