<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.ssvtech.jalforce1.fragment.report.PreviousDateDeliveryReport">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        >


        <TextView
            android:id="@+id/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:foregroundGravity="center|center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/SearchWithCustomerId"
            android:textSize="35dp" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/route"
            app:boxBackgroundColor="#ffffff">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/routeValue"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:editable="true"
                android:gravity="center"
                android:text=""

                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/date2"
            app:boxBackgroundColor="#ffffff">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dateValue"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:editable="true"
                android:gravity="center"
                android:text=""

                />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/searchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/times"
                android:layout_alignParentBottom="false"
                android:layout_gravity="left"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="20dp"
                android:layout_toStartOf="@+id/textview"
                android:layout_toLeftOf="@+id/textview"
                android:foregroundGravity="left"
                android:gravity="left"
                android:text="@string/search" />

            <Button
                android:id="@+id/homeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/times"
                android:layout_alignParentBottom="false"
                android:layout_gravity="right"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="0dp"
                android:layout_toEndOf="@+id/textview"
                android:layout_toRightOf="@+id/textview"
                android:text="@string/Home" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
