<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ssvtech.jalforce1.fragment.LedgerCustomerSearchFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        >


        <TextView
            android:id="@+id/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:foregroundGravity="center|center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/SearchWithCustomerId"
            android:textSize="35dp" />


        <EditText
            android:id="@+id/customerstringid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:digits="ABCDEFGHIJKLMNOP1234567890"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:hint="@string/Enter_Customer_Id"
            android:maxLength="4"
            android:textColorHighlight="#ff7eff15"
            android:textColorHint="#ffff25e6" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/searchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/times"
                android:layout_alignParentBottom="false"
                android:layout_gravity="left"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="20dp"
                android:layout_toStartOf="@+id/textview"
                android:layout_toLeftOf="@+id/textview"
                android:foregroundGravity="left"
                android:gravity="left"
                android:text="@string/search" />

            <Button
                android:id="@+id/homeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/times"
                android:layout_alignParentBottom="false"
                android:layout_gravity="right"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="0dp"
                android:layout_toEndOf="@+id/textview"
                android:layout_toRightOf="@+id/textview"
                android:text="@string/Home" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>
